einstellung_derive/src/trybuild_tests/invalid_merge.stderr
error: Unknown value: `foo`. Available values: `append`, `function`, `replace`
 --> src/trybuild_tests/invalid_merge.rs
  |
  |     #[config(merge = "foo")]
  |                      ^^^^^
